<?xml version="1.0" encoding="utf-8"?>

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:paddingLeft="15dp"
    android:paddingRight="15dp"
    android:paddingTop="20dp"
    android:paddingBottom="20dp">

    <android.support.v7.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:card_view="http://schemas.android.com/apk/res-auto"
        android:id="@+id/card_view_ship_dialog"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="0dp"
        card_view:cardCornerRadius="4dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <RelativeLayout
                android:id="@+id/ship_dialog_header"
                android:layout_width="match_parent"
                android:layout_height="44dp"
                android:background="#f6f6f6">

                <TextView
                    android:id="@+id/ship_dialog_title"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:gravity="center_vertical|left"
                    android:layout_marginLeft="5dp"
                    android:text="@string/select_your_truck"
                    style="@style/FlatButton"/>

            </RelativeLayout>

            <android.support.v4.widget.NestedScrollView
                android:id="@+id/ship_dialog_scroll_view"
                android:layout_width="match_parent"
                android:layout_height="350dp"
                android:scrollbars="vertical">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@color/booking_background"
                    android:orientation="vertical">

                    <android.support.v7.widget.RecyclerView
                        android:id="@+id/ship_dialog_container"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content" />

                    <TextView
                        android:id="@+id/custom_ship_add_btn"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="+ Add Custom Vehicle"
                        android:gravity="center"
                        style="@style/FlatButton"/>

                    <android.support.v7.widget.RecyclerView
                        android:id="@+id/custom_ship_dialog_container"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content" />

                    <View
                        android:layout_width="match_parent"
                        android:layout_height="200dp">

                    </View>

                </LinearLayout>

            </android.support.v4.widget.NestedScrollView>


            <RelativeLayout
                android:id="@+id/ship_dialog_footer"
                android:layout_width="match_parent"
                android:layout_height="44dp"
                android:background="#f6f6f6">


                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:gravity="center_vertical|left">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="match_parent"
                        android:text="@string/ship_dialog_footer_part1"
                        android:textSize="13sp"
                        android:textColor="#898989"
                        android:gravity="center"
                        android:layout_marginLeft="15dp" />

                    <TextView
                        android:id="@+id/ship_dialog_shipment_msg_count"
                        android:layout_width="wrap_content"
                        android:layout_height="match_parent"
                        android:text="@string/zero"
                        android:textStyle="bold"
                        android:textSize="13sp"
                        android:textColor="#898989"
                        android:gravity="center" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="match_parent"
                        android:text="@string/ship_dialog_footer_part2"
                        android:textSize="13sp"
                        android:textColor="#898989"
                        android:gravity="center" />
                </LinearLayout>

                <Button
                    android:id="@+id/ship_dialog_done_btn"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:gravity="center_vertical|right"
                    android:layout_marginRight="15dp"
                    android:text="@string/done"
                    style="@style/FlatButton"/>

            </RelativeLayout>
        </LinearLayout>
    </android.support.v7.widget.CardView>

</LinearLayout>