<android.support.v7.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:card_view="http://schemas.android.com/apk/res-auto"
    android:id="@+id/card_view_cancel"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_margin="5dp"
    card_view:cardCornerRadius="4dp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <RelativeLayout
            android:id="@+id/rlCancelledMainContent"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingEnd="8dp"
            android:paddingLeft="20dp"
            android:paddingRight="8dp"
            android:paddingStart="20dp"
            android:paddingTop="8dp">


            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/cancelled_status"
                android:id="@+id/tvTripDetailsStatus"
                android:layout_alignParentTop="true"
                android:layout_alignParentLeft="true"
                android:layout_alignParentStart="true"
                style="@style/TextLabel"
                android:layout_marginBottom="12dp"
                android:background="@color/colorCancelledStatus"
                android:theme="@style/transaction_status"
                android:textColor="@color/cardview_light_background" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/pickup_from"
                android:id="@+id/tvNumberOfBookingsLabel"
                android:layout_below="@+id/tvTripDetailsStatus"
                android:layout_alignParentLeft="true"
                android:layout_alignParentStart="true"
                android:theme="@style/TextLabel" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/drop_at"
                android:id="@+id/tvTotalAmountLabel"
                android:theme="@style/TextLabel"
                android:layout_alignTop="@+id/tvNumberOfBookingsLabel"
                android:layout_toLeftOf="@+id/imageView2"
                android:layout_toStartOf="@+id/imageView2"
                android:layout_marginRight="84dp"
                android:layout_marginEnd="84dp" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/tvTotalAmountValue"
                android:layout_below="@+id/tvTotalAmountLabel"
                android:layout_alignLeft="@+id/tvTotalAmountLabel"
                android:layout_alignStart="@+id/tvTotalAmountLabel"
                android:theme="@style/CardTextValue" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/tvNumberOfBookingsValue"
                android:layout_below="@+id/tvNumberOfBookingsLabel"
                android:layout_alignParentLeft="true"
                android:layout_alignParentStart="true"
                android:theme="@style/CardTextValue" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/number_of_truck"
                android:id="@+id/tvPaidAmountLabel"
                android:layout_below="@+id/tvNumberOfBookingsValue"
                android:layout_alignParentLeft="true"
                android:layout_alignParentStart="true"
                android:theme="@style/TextLabel" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text=" "
                android:id="@+id/tvCancelNumberOfTrucks"
                android:layout_below="@+id/tvPaidAmountLabel"
                android:layout_alignParentLeft="true"
                android:layout_alignParentStart="true"
                android:theme="@style/CardTextValue" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/shipment_date"
                android:id="@+id/tvBalanceLabel"
                android:layout_below="@+id/tvTotalAmountValue"
                android:layout_alignLeft="@+id/tvTotalAmountValue"
                android:layout_alignStart="@+id/tvTotalAmountValue"
                android:theme="@style/TextLabel" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/tvCancelShipmentDate"
                android:layout_below="@+id/tvBalanceLabel"
                android:layout_alignLeft="@+id/tvBalanceLabel"
                android:layout_alignStart="@+id/tvBalanceLabel"
                android:theme="@style/CardTextValue" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/tvCancelTransactionId"
                android:layout_alignParentTop="true"
                android:layout_toRightOf="@+id/tvTripDetailsStatus"
                android:layout_toEndOf="@+id/tvTripDetailsStatus"
                android:layout_marginLeft="6dp"
                android:layout_marginStart="6dp"
                android:theme="@style/CardTransactionID" />

            <ImageView
                android:layout_width="@dimen/go_right_width"
                android:layout_height="@dimen/go_right_height"
                android:id="@+id/imageView2"
                android:src="@mipmap/ic_go_right"
                android:layout_marginRight="17dp"
                android:layout_marginEnd="17dp"
                android:layout_alignBottom="@+id/tvTotalAmountValue"
                android:layout_alignParentRight="true"
                android:layout_alignParentEnd="true" />
        </RelativeLayout>


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="#f6f6f6"
            android:orientation="horizontal"
            android:paddingBottom="10dp"
            android:paddingLeft="20dp"
            android:paddingTop="10dp">

            <TextView
                android:id="@+id/tvCancelQuoteLabel"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingRight="3dp"
                android:text="@string/quote"
                android:textColor="@color/card_text_color_1"
                android:textSize="@dimen/card_text_label_2" />

            <TextView
                android:id="@+id/tvCancelQuote"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingRight="93dp"
                android:textStyle="bold"
                android:theme="@style/CardAmountText" />

            <TextView
                android:id="@+id/tvCancelCancelledOnLabel"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingRight="3dp"
                android:text="@string/cancelled_on"
                android:textColor="@color/card_text_color_1"
                android:textSize="@dimen/card_text_label_2" />

            <TextView
                android:id="@+id/tvCancelledOn"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textStyle="bold"
                android:theme="@style/CardTextValue" />
        </LinearLayout>
    </LinearLayout>
</android.support.v7.widget.CardView>
